Trying fix for size on mobile devices.

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -7,3 +7,25 @@
     max-width: 830px;
     width: 830px;
 }
+
+@media screen and (max-width: 480px) {
+  body {
+    font-size:14px;
+  }
+
+  .inner {
+    min-width: 320px;
+    max-width: 480px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  body {
+    font-size:14px;
+  }
+
+  .inner {
+    min-width: 240px;
+    max-width: 320px;
+  }  
+}
